# deltaplayer

./: .gitignore  CMakeLists.txt  CMakeListsC.txt  GUI_BASE.cpp  GUI_BASE.h  GUI_BASE.ui  README.md  api.py  app_functions.py  app_modules.py  cdialog.py  changeicon.py  cmdworker.cpp  cmdworker.h  customlistwidget.cpp  customlistwidget.h  deltaplayer.exe.spec  deltaplayer.py  detector.py  dp_audioapi.cpp  dp_audioapi.h  dpupdater.exe.spec  draggableitem.cpp  draggableitem.h  exitprogram.cpp  exitprogram.h  filemanager.cpp  filemanager.h  files_rc.py  imageloader.cpp  imageloader.h  main.cpp  main.py  main.spec  mainwindow.cpp  mainwindow.h  mainwindow.ui  out.txt  playbar_manager.cpp  playbar_manager.h  (+20 more)
GameRegister/: gameDb.json  gregister.py  gregister.spec  lib.json  ui_register.py  untitled.ui
GameRegister/resultats/: ass.py  drakz.json  raph.json  remi.json  sodio.json
UI/: GUI_BASE copy.ui  GUI_BASE.ui  contrusc.py  customdialog.ui  files.qrc  logo.xcf  splash.ui
